Production/01-02-2025/force-app/main/default/objects/Audience_Report__c/fields/AOL_Video_ID__c.field-meta.xml
<CustomField>
    <fullName>AOL_Video_ID__c</fullName>
    <formula>Segment_Name__r.AOL_Video_ID__c</formula>
    <label>AOL Video ID</label>
    <type>Text</type>
</CustomField>