Production/01-02-2025/force-app/main/default/objects/Audience_Report__c/fields/Country_Region_Roll_up_Index_New__c.field-meta.xml
<CustomField>
    <fullName>Country_Region_Roll_up_Index_New__c</fullName>
    <formula>TEXT( Country__r.Region_Roll__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Region Roll-up Index (New)</label>
    <type>Text</type>
</CustomField>