Production/01-02-2025/force-app/main/default/objects/Audience_Report__c/fields/Data_Supplier_RAW_UPPER__c.field-meta.xml
<CustomField>
    <fullName>Data_Supplier_RAW_UPPER__c</fullName>
    <label>Data Supplier Raw</label>
    <length>200</length>
    <type>Text</type>
</CustomField>