Production/01-02-2025/force-app/main/default/objects/Audience_Report__c/fields/Estimated_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Revenue__c</fullName>
    <formula>Eyeota_UI_Volume__c * Display__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>