Production/01-02-2025/force-app/main/default/objects/Audience_Report__c/fields/Segment_Content_1_ADT__c.field-meta.xml
<CustomField>
    <fullName>Segment_Content_1_ADT__c</fullName>
    <formula>Segment_Name__r.Segment_Content_1_ADTNEW_2018__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment Content 1 (ADT)</label>
    <type>Text</type>
</CustomField>