Production/01-02-2025/force-app/main/default/objects/Audience_Report__c/fields/Segment_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Segment_Supplier__c</fullName>
    <formula>Segment_Name__r.Segment_Supplier_External__c</formula>
    <label>Segment Supplier</label>
    <type>Text</type>
</CustomField>