Production/01-02-2025/force-app/main/default/objects/Audience_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Supply_Type_UI__c</columns>
    <columns>Status__c</columns>
    <columns>Keywords__c</columns>
    <columns>Segment_Taxonomy_Name__c</columns>
    <columns>Eyeota_UI_Segment_Name__c</columns>
    <columns>Segment_Key__c</columns>
    <columns>Uniques__c</columns>
    <columns>Eyeota_UI_Volume__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Supply_Type_UI__c</field>
        <operation>notContain</operation>
        <value>linked</value>
    </filters>
    <label>Unmapped Segments</label>
</ListView>